added rest of csv files

--- a/project_nb.ipynb
+++ b/project_nb.ipynb
@@ -63,7 +63,9 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1882,6 +1884,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "other_felony_csv = other_felony_df.to_csv(r'/Users/andrewtriola/Documents/flatiron/stats_project/other_felony_csv.csv', index=None, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "misdemeanor_csv = misdemeanor_df.to_csv(r'/Users/andrewtriola/Documents/flatiron/stats_project/misdemeanor_csv.csv', index=None, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "violation_csv = violation_df.to_csv(r'/Users/andrewtriola/Documents/flatiron/stats_project/violation_csv.csv', index=None, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2844,7 +2873,9 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -3515,6 +3546,13 @@
     "manhattandf = mean_rent_df[mean_rent_df['Borough'] == \"Manhattan\"]\n",
     "manhattandf.head(34)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
