update to notebook

--- a/project_nb.ipynb
+++ b/project_nb.ipynb
@@ -3549,10 +3549,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "manhattan_rent_csv = manhattandf.to_csv(r'/Users/andrewtriola/Documents/flatiron/stats_project/manhattan_rent.csv', index=None, header=True)"
+   ]
   },
   {
    "cell_type": "code",
@@ -5609,6 +5611,15 @@
    "source": [
     "zipdf = zipdf[zipdf['Borough'] == 'Manhattan']\n",
     "zipdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_code_csv = zipdf.to_csv(r'/Users/andrewtriola/Documents/flatiron/stats_project/zip_codes.csv', index=None, header=True)"
    ]
   },
   {
